aws-eks/vpc.tf

resource "aws_vpc" "myVPC" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "myVPC"
  }
}
